src/eleventy/content/_includes/v22.2/misc/session-vars.md
| Variable name | Description | Initial value | Modify with [`SET`](set-vars.html)? | View with [`SHOW`](show-vars.html)? |
|---|---|---|---|---|
| <a name="application-name"></a> `application_name` | The current application name for statistics collection. | Empty string, or `cockroach` for sessions from the [built-in SQL client](cockroach-sql.html). | Yes | Yes |
| <a name="bytea-output"></a> `bytea_output` | The [mode for conversions from `STRING` to `BYTES`](bytes.html#supported-conversions). | hex | Yes | Yes |
| <a name="client-min-messages"></a> `client_min_messages` | The severity level of notices displayed in the [SQL shell](cockroach-sql.html). Accepted values include `debug5`, `debug4`, `debug3`, `debug2`, `debug1`, `log`, `notice`, `warning`, and `error`. | `notice` | Yes | Yes |
| <a name="copy-from-atomic-enabled"></a> `copy_from_atomic_enabled` | **New in v22.2:** If set to `on`, [`COPY FROM`](copy-from.html) statements are committed atomically, matching PostgreSQL behavior. If set to `off`, `COPY FROM` statements are segmented into batches of 100 rows unless issued within an explicit transaction, matching the CockroachDB behavior in versions prior to v22.2. | `on` | Yes | Yes |
| <a name="cost-scans-with-default-col-size"></a> `cost_scans_with_default_col_size` | Whether to prevent the optimizer from considering column size when costing plans. | `false` | Yes | Yes |
| <a name="crdb-version"></a> `crdb_version` | The version of CockroachDB. | <code>CockroachDB OSS <i>version</i></code> | No | Yes |
| <a name="database"></a> `database` | The [current database](sql-name-resolution.html#current-database). | Database in connection string, or empty if not specified. | Yes | Yes |
| <a name="datestyle"></a> `datestyle` | The input string format for [`DATE`](date.html) and [`TIMESTAMP`](timestamp.html) values. Accepted values include `ISO,MDY`, `ISO,DMY`, and `ISO,YMD`. | The value set by the `sql.defaults.datestyle` [cluster setting](cluster-settings.html) (`ISO,MDY`, by default). | Yes | Yes |
| <a name="default-int-size"></a> `default_int_size` | The size, in bytes, of an [`INT`](int.html) type. | `8` | Yes | Yes |
| <a name="default-transaction-isolation"></a> `default_transaction_isolation` | All transactions execute with `SERIALIZABLE` isolation. See [Transactions: Isolation levels](transactions.html#isolation-levels). | `SERIALIZABLE` | No | Yes |
| <a name="default-transaction-priority"></a> `default_transaction_priority` | The default transaction priority for the current session. The supported options are `low`, `normal`, and `high`. | `normal` | Yes | Yes |
| <a name="default-transaction-quality-of-service"></a> `default_transaction_quality_of_service` | The default transaction quality of service for the current session. The supported options are `regular`, `critical`, and `background`. See [Set quality of service level](admission-control.html#set-quality-of-service-level-for-a-session). | `regular` | Yes | Yes |
| <a name="default-transaction-read-only"></a> `default_transaction_read_only` | The default transaction access mode for the current session. <br/>If set to `on`, only read operations are allowed in transactions in the current session; if set to `off`, both read and write operations are allowed. See [`SET TRANSACTION`](set-transaction.html) for more details. | `off` | Yes | Yes |
| <a name="default-transaction-use-follower-reads"></a> `default_transaction_use_follower_reads` | If set to on, all read-only transactions use [`AS OF SYSTEM TIME follower_read_timestamp()`](as-of-system-time.html) to allow the transaction to use follower reads. <br/>If set to `off`, read-only transactions will only use follower reads if an `AS OF SYSTEM TIME` clause is specified in the statement, with an interval of at least 4.8 seconds. | `off` | Yes | Yes |
| <a id="disallow-full-table-scans"></a> `disallow_full_table_scans` | If set to `on`, queries on "large" tables with a row count greater than [`large_full_scan_rows`](#large-full-scan-rows) will not use full table or index scans. If no other query plan is possible, queries will return an error message. This setting does not apply to internal queries, which may plan full table or index scans without checking the session variable. | `off` | Yes | Yes |
| <a name="distsql"></a> `distsql` | The query distribution mode for the session. By default, CockroachDB determines which queries are faster to execute if distributed across multiple nodes, and all other queries are run through the gateway node. | `auto` | Yes | Yes |
| <a name="enable-auto-rehoming"></a> `enable_auto_rehoming` | When enabled, the [home regions](alter-table.html#crdb_region) of rows in [`REGIONAL BY ROW`](alter-table.html#set-the-table-locality-to-regional-by-row) tables are automatically set to the region of the [gateway node](ui-sessions-page.html#session-details-gateway-node) from which any [`UPDATE`](update.html) or [`UPSERT`](upsert.html) statements that operate on those rows originate. | `off` | Yes | Yes |
| <a id="enable-experimental-alter-column-type-general"></a> `enable_experimental_alter_column_type_general` | If `on`, it is possible to [alter column data types]({% link "{{ page.version.version }}/alter-table.md" %}#alter-column-data-types). | `off` | Yes | Yes |
| <a name="enable-implicit-select-for-update"></a> `enable_implicit_select_for_update` | Indicates whether [`UPDATE`](update.html) and [`UPSERT`](upsert.html) statements acquire locks using the `FOR UPDATE` locking mode during their initial row scan, which improves performance for contended workloads.<br/><br/>For more information about how `FOR UPDATE` locking works, see the documentation for [`SELECT FOR UPDATE`](select-for-update.html). | `on` | Yes | Yes |
| <a name="enable-implicit-transaction-for-batch-statements"></a> `enable_implicit_transaction_for_batch_statements` | Indicates whether multiple statements in a single query (a "batch statement") will all run in the same implicit transaction, which matches the PostgreSQL wire protocol. | `on` | Yes | Yes |
| <a name="enable-insert-fast-path"></a> `enable_insert_fast_path` | Indicates whether CockroachDB will use a specialized execution operator for inserting into a table. We recommend leaving this setting `on`. | `on` | Yes | Yes |
| <a name="enable-zigzag-join"></a> `enable_zigzag_join` | Indicates whether the [cost-based optimizer](cost-based-optimizer.html) will plan certain queries using a zig-zag merge join algorithm, which searches for the desired intersection by jumping back and forth between the indexes based on the fact that after constraining indexes, they share an ordering. | `on` | Yes | Yes |
| <a name="enforce-home-region"></a> `enforce_home_region` | **New in v22.2:** If set to `on`, queries return an error and in some cases a suggested resolution if they cannot run entirely in their home region. This can occur if a query has no home region (for example, if it reads from different home regions in a [regional by row table](multiregion-overview.html#regional-by-row-tables)) or a query's home region differs from the [gateway](architecture/life-of-a-distributed-transaction.html#gateway) region. Note that only tables with `ZONE` [survivability](when-to-use-zone-vs-region-survival-goals.html) can be scanned without error when this is enabled. For more information about home regions, see [Table localities](multiregion-overview.html#table-localities).<br/><br/>This feature is in preview. It is subject to change. | `off` | Yes | Yes |
| <a name="extra-float-digits"></a> `extra_float_digits` | The number of digits displayed for floating-point values. Only values between `-15` and `3` are supported. | `0` | Yes | Yes |
| <a name="force-savepoint-restart"></a> `force_savepoint_restart` | When set to `true`, allows the [`SAVEPOINT`](savepoint.html) statement to accept any name for a savepoint. | `off` | Yes | Yes |
| <a name="foreign-key-cascades-limit"></a> `foreign_key_cascades_limit` | Limits the number of [cascading operations](foreign-key.html#use-a-foreign-key-constraint-with-cascade) that run as part of a single query. | `10000` | Yes | Yes |
| <a name="idle-in-session-timeout"></a> `idle_in_session_timeout` | Automatically terminates sessions that idle past the specified threshold.<br/><br/>When set to `0`, the session will not timeout. | The value set by the `sql.defaults.idle_in_session_timeout` [cluster setting](cluster-settings.html) (`0s`, by default). | Yes | Yes |
| <a name="idle-in-transaction-session-timeout"></a> `idle_in_transaction_session_timeout` | Automatically terminates sessions that are idle in a transaction past the specified threshold.<br/><br/>When set to `0`, the session will not timeout. | The value set by the `sql.defaults.idle_in_transaction_session_timeout` [cluster setting](cluster-settings.html) (0s, by default). | Yes | Yes |
| <a name="index-recommendations-enabled"></a> `index_recommendations_enabled` | If `true`, display recommendations to create indexes required to eliminate full table scans. <br/>For more details, see [Default statement plans](explain.html#default-statement-plans). | `true` | Yes | Yes |
| <a name="inject-retry-errors-enabled"></a> `inject_retry_errors_enabled` | If `true`, any statement executed inside of an explicit transaction (with the exception of [`SET`](set-vars.html) statements) will return a transaction retry error. If the client retries the transaction using the special [`cockroach_restart SAVEPOINT` name](savepoint.html#savepoints-for-client-side-transaction-retries), after the 3rd retry error, the transaction will proceed as normal. Otherwise, the errors will continue until `inject_retry_errors_enabled` is set to `false`. For more details, see [Testing transaction retry logic](transactions.html#testing-transaction-retry-logic). | `false` | Yes | Yes |
| <a name="intervalstyle"></a> `intervalstyle` | The input string format for [`INTERVAL`](interval.html) values. Accepted values include `postgres`, `iso_8601`, and `sql_standard`. | The value set by the `sql.defaults.intervalstyle` [cluster setting](cluster-settings.html) (`postgres`, by default). | Yes | Yes |
| <a name="is-superuser"></a> `is_superuser` | If `on` or `true`, the current user is a member of the [`admin` role](security-reference/authorization.html#admin-role). | User-dependent | No | Yes |
| <a id="large-full-scan-rows"></a> `large_full_scan_rows` | Determines which tables are considered "large" such that `disallow_full_table_scans` prevents queries from performing full table or index scans on those tables. The default value is `1000`. To prevent all full table or index scans, set to `0`. | User-dependent | No | Yes |
| <a name="locality"></a> `locality` | The location of the node.<br/></br>For more information, see [Locality](cockroach-start.html#locality). | Node-dependent | No | Yes |
| <a name="lock-timeout"></a> `lock_timeout` | The amount of time a query can spend acquiring or waiting for a single [row-level lock](architecture/transaction-layer.html#concurrency-control). <br/>In CockroachDB, unlike in PostgreSQL, non-locking reads wait for conflicting locks to be released. As a result, the `lock_timeout` configuration applies to writes, and to locking and non-locking reads in read-write and read-only transactions. <br/>If `lock_timeout = 0`, queries do not timeout due to lock acquisitions. | The value set by the `sql.defaults.lock_timeout` [cluster setting](cluster-settings.html) (`0`, by default) | Yes | Yes |
| <a name="node-id"></a> `node_id` | The ID of the node currently connected to. <br/><br/>This variable is particularly useful for verifying load balanced connections. | Node-dependent | No | Yes |
| <a name="null-ordered-last"></a> `null_ordered_last` | Set the default ordering of `NULL`s. The default order is `NULL`s first for ascending order and `NULL`s last for descending order. | `false` | Yes | Yes |
| <a name="optimizer-use-forecasts"></a> `optimizer_use_forecasts` | If `on`, the optimizer uses forecasted statistics for query planning. | `on` | Yes | Yes |
| <a name="optimizer-use-histograms"></a> `optimizer_use_histograms` | If `on`, the optimizer uses collected histograms for cardinality estimation. | `on` | No | Yes |
| <a name="optimizer-use-multicol-stats"></a> `optimizer_use_multicol_stats` | If `on`, the optimizer uses collected multi-column statistics for cardinality estimation. | `on` | No | Yes |
| <a name="optimizer-use-not-visible-indexes"></a> `optimizer_use_not_visible_indexes` | If `on`, the optimizer uses not visible indexes for planning. | `off` | No | Yes |
| <a name="pg_trgm_similarity_threshold"></a> `pg_trgm.similarity_threshold` | The threshold above which a [`%`](functions-and-operators.html#operators) string comparison returns `true`. The value must be between `0` and `1`. For more information, see [Trigram Indexes](trigram-indexes.html). | `0.3` | Yes | Yes |
| <a name="prefer-lookup-joins-for-fks"></a> `prefer_lookup_joins_for_fks` | If `on`, the optimizer prefers [`lookup joins`](joins.html#lookup-joins) to [`merge joins`](joins.html#merge-joins) when performing [`foreign key`](foreign-key.html) checks. | `off` | Yes | Yes |
| <a name="reorder-joins-limit"></a> `reorder_joins_limit` | Maximum number of joins that the optimizer will attempt to reorder when searching for an optimal query execution plan. <br/><br/>For more information, see [Join reordering](cost-based-optimizer.html#join-reordering). | `8` | Yes | Yes |
| <a name="results-buffer-size"></a> `results_buffer_size` | The default size of the buffer that accumulates results for a statement or a batch of statements before they are sent to the client. <br/>This can also be set for all connections using the `sql.defaults.results_buffer_size` [cluster setting](cluster-settings.html). Note that auto-retries generally only happen while no results have been delivered to the client, so reducing this size can increase the number of retryable errors a client receives. On the other hand, increasing the buffer size can increase the delay until the client receives the first result row. Setting to 0 disables any buffering. | `16384` | Yes | Yes |
| <a name="require-explicit-primary-keys"></a> `require_explicit_primary_keys` | If `on`, CockroachDB throws an error for all tables created without an explicit primary key defined. | `off` | Yes | Yes |
| <a name="search-path"></a> `search_path` | A list of schemas that will be searched to resolve unqualified table or function names. <br/>For more details, see [SQL name resolution](sql-name-resolution.html). | `public` | Yes | Yes |
| <a name="serial-normalization"></a> `serial_normalization` | Specifies the default handling of [`SERIAL`](serial.html) in table definitions. Valid options include `'rowid'`, `'virtual_sequence'`, `sql_sequence`, `sql_sequence_cached`, and `unordered_rowid`. <br/>If set to `'virtual_sequence'`, the `SERIAL` type auto-creates a sequence for [better compatibility with Hibernate sequences](https://forum.cockroachlabs.com/t/hibernate-sequence-generator-returns-negative-number-and-ignore-unique-rowid/1885). <br/>If set to `sql_sequence_cached`, you can use the `sql.defaults.serial_sequences_cache_size` [cluster setting](cluster-settings.html) to control the number of values to cache in a user's session, with a default of 256. <br/>If set to `unordered_rowid`, the `SERIAL` type generates a globally unique 64-bit integer (a combination of the insert timestamp and the ID of the node executing the statement) that does not have unique ordering. | `'rowid'` | Yes | Yes |
| <a name="server-version"></a> `server_version` | The version of PostgreSQL that CockroachDB emulates. | Version-dependent | No | Yes |
| <a name="server-version-num"></a> `server_version_num` | The version of PostgreSQL that CockroachDB emulates. | Version-dependent | Yes | Yes |
| <a name="session-id"></a> `session_id` | The ID of the current session. | Session-dependent | No | Yes |
| <a name="session-user"></a> `session_user` | The user connected for the current session. | User in connection string | No | Yes |
| <a name="sql-safe-updates"></a> `sql_safe_updates` | If `false`, potentially unsafe SQL statements are allowed, including `DROP` of a non-empty database and all dependent objects, [`DELETE`](delete.html) without a `WHERE` clause, [`UPDATE`](update.html) without a `WHERE` clause, and [`ALTER TABLE .. DROP COLUMN`](alter-table.html#drop-column). <br/>See [Allow Potentially Unsafe SQL Statements](cockroach-sql.html#allow-potentially-unsafe-sql-statements) for more details. | `true` for interactive sessions from the [built-in SQL client](cockroach-sql.html), <br/>`false` for sessions from other clients | Yes | Yes |
| <a name="statement-timeout"></a> `statement_timeout` | The amount of time a statement can run before being stopped. <br/>This value can be an `int` (e.g., `10`) and will be interpreted as milliseconds. It can also be an interval or string argument, where the string can be parsed as a valid interval (e.g., `'4s'`). <br/>A value of `0` turns it off. | The value set by the `sql.defaults.statement_timeout` [cluster setting](cluster-settings.html) (`0s`, by default). | Yes | Yes |
| <a name="stub-catalog-tables"></a> `stub_catalog_tables` | If `off`, querying an unimplemented, empty [`pg_catalog`](pg-catalog.html) table will result in an error, as is the case in v20.2 and earlier. If `on`, querying an unimplemented, empty `pg_catalog` table simply returns no rows. | `on` | Yes | Yes |
| <a name="timezone"></a> `timezone` | The default time zone for the current session. This session variable was named `"time zone"` (with a space) in CockroachDB 1.x. It has been renamed for compatibility with PostgreSQL. | `UTC` | Yes | Yes |
| <a name="tracing"></a> `tracing` | The trace recording state. | `off` | | Yes |
| <a name="transaction-isolation"></a> `transaction_isolation` | All transactions execute with `SERIALIZABLE` isolation. See [Transactions: Isolation levels](transactions.html#isolation-levels). This session variable was called `transaction isolation level` (with spaces) in CockroachDB 1.x. It has been renamed for compatibility with PostgreSQL. | `SERIALIZABLE` | No | Yes |
| <a name="transaction-priority"></a> `transaction_priority` | The priority of the current transaction. See Transactions: Transaction priorities for more details. This session variable was called transaction priority (with a space) in CockroachDB 1.x. It has been renamed for compatibility with PostgreSQL. | `NORMAL` | Yes | Yes |
| <a name="transaction-read-only"></a> `transaction_read_only` | The access mode of the current transaction. See [`SET TRANSACTION`](set-transaction.html) for more details. | `off` | Yes | Yes |
| <a name="transaction-rows-read-err"></a> `transaction_rows_read_err` | The limit for the number of rows read by a SQL transaction. If this value is exceeded the transaction will fail (or the event will be logged to `SQL_INTERNAL_PERF` for internal transactions). | `0` | Yes | Yes |
| <a name="transaction-rows-read-log"></a> `transaction_rows_read_log` | The threshold for the number of rows read by a SQL transaction. If this value is exceeded, the event will be logged to `SQL_PERF` (or `SQL_INTERNAL_PERF` for internal transactions). | `0` | Yes | Yes |
| <a name="transaction-rows-written-err"></a> `transaction_rows_written_err` | The limit for the number of rows written by a SQL transaction. If this value is exceeded the transaction will fail (or the event will be logged to `SQL_INTERNAL_PERF` for internal transactions). | `0` | Yes | Yes |
| <a name="transaction-rows-written-log"></a> `transaction_rows_written_log` | The threshold for the number of rows written by a SQL transaction. If this value is exceeded, the event will be logged to `SQL_PERF` (or `SQL_INTERNAL_PERF` for internal transactions). | `0` | Yes | Yes |
| <a name="transaction-status"></a> `transaction_status` | The state of the current transaction. See [Transactions](transactions.html) for more details. This session variable was called `transaction status` (with a space) in CockroachDB 1.x. It has been renamed for compatibility with PostgreSQL. | `NoTxn` | No | Yes |
| <a name="troubleshooting_mode_enabled"></a> `troubleshooting_mode_enabled` | When enabled, avoid performing additional work on queries, such as collecting and emitting telemetry data. This session variable is particularly useful when the cluster is experiencing issues, unavailability, or failure. | `off` | Yes | Yes |
| <a name="use_declarative_schema_changer"></a> `use_declarative_schema_changer` | Whether to use the declarative schema changer for supported statements. See [Declarative schema changer](online-schema-changes.html#declarative-schema-changer) for more details. | `on` | Yes | Yes |
| <a name="vectorize"></a> `vectorize` | The vectorized execution engine mode. Options include `on` and `off`. For more details, see [Configure vectorized execution for CockroachDB](vectorized-execution.html#configure-vectorized-execution). | `on` | Yes | Yes |

The following session variables are exposed only for backwards compatibility with earlier CockroachDB releases and have no impact on how CockroachDB runs:

| Variable name | Initial value | Modify with [`SET`](set-vars.html)? | View with [`SHOW`](show-vars.html)? |
|---|---|---|---|
| <a name="backslash-quote"></a> `backslash_quote` | `safe_encoding` | No | Yes |
| <a name="client-encoding"></a> `client_encoding` | `UTF8` | No | Yes |
| <a name="default-tablespace"></a> `default_tablespace` | | No | Yes |
| <a name="enable-drop-enum-value"></a> `enable_drop_enum_value` | `off` | Yes | Yes |
| <a name="enable-seqscan"></a> `enable_seqscan` | `on` | Yes | Yes |
| <a name="escape-string-warning"></a> `escape_string_warning` | `on` | No | Yes |
| <a name="experimental-enable-hash-sharded-indexes"></a> `experimental_enable_hash_sharded_indexes` | `off` | Yes | Yes |
| <a name="integer-datetimes"></a> `integer_datetimes` | `on` | No | Yes |
| <a name="max-identifier-length"></a> `max_identifier_length` | `128` | No | Yes |
| <a name="max-index-keys"></a> `max_index_keys` | `32` | No | Yes |
| <a name="row-security"></a> `row_security` | `off` | No | Yes |
| <a name="standard-conforming-strings"></a> `standard_conforming_strings` | `on` | No | Yes |
| <a name="server-encoding"></a> `server_encoding` | `UTF8` | Yes | Yes |
| <a name="synchronize-seqscans"></a> `synchronize_seqscans` | `on` | No | Yes |
| <a name="synchronous-commit"></a> `synchronous_commit` | `on` | Yes | Yes |
